# Banter

./: .gitignore  LICENSE
.github/workflows/: ci-backend.yaml  ci-mobile.yaml  ci-web.yaml
backend/: pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: health.py
