[project]
name = "banter"
version = "0.1.0"
description = "A simple chat application"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx2",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
files = ["src", "tests"]
strict = true